# neo4j-graphrag-kg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CODE_REVIEW.md  DEV_NOTES.md  SESSION_LOG.md  V2_GITHUB_ISSUES.md  V2_REBUILD_BLUEPRINT.md  V2_ROADMAP.md
examples/: demo.txt  demo_llm.txt
examples/synthetic_claims_network/: 01_policy_application.txt  02_underwriting_inspection.txt  03_first_notice_of_loss.txt  04_adjuster_field_notes.txt  05_vendor_invoices.txt  06_payment_journal.txt  07_internal_audit_email_thread.txt  08_broker_eo_review.txt  09_legal_interview_extract.txt  10_cross_claim_linkage.txt  README.md  investigator_queries.md
scripts/: create-v2-issues.ps1  ingest-synthetic-claims.ps1  smoke.sh
src/neo4j_graphrag_kg/: __init__.py  chunker.py  cli.py  config.py  extractor.py  ids.py  ingest.py  neo4j_client.py  protocols.py  schema.py  services.py  upsert.py
src/neo4j_graphrag_kg/extractors/: __init__.py  base.py  llm.py  simple.py
src/neo4j_graphrag_kg/rag/: __init__.py  answer.py  pipeline.py  text2cypher.py
src/neo4j_graphrag_kg/web/: __init__.py  app.py
src/neo4j_graphrag_kg/web/static/: index.html
tests/: conftest.py  test_chunker.py  test_cli_doctor.py  test_cli_ingest_jobs.py  test_cli_query_safety.py  test_config.py  test_extractor.py  test_extractors_base.py  test_extractors_llm.py  test_fixes_session4.py  test_ids.py  test_ingest_directionality.py  test_ingest_jobs.py  test_ingest_replace_mode.py  test_ingest_summary.py  test_integration_ingest.py  test_integration_ingest_jobs.py  test_integration_init_db.py  test_integration_ping.py  test_protocols.py  test_rag.py  test_schema.py  test_security.py  test_upsert.py  test_web.py
